--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 .cityInput {
   padding: 10px;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
   border: 2px solid hwb(0, 0% 20%, 0.3);
   border-radius: 10px;
@@ -22,7 +22,7 @@ body {
 button[type="submit"] {
   padding: 10px 20px;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.5rem;
   background-color: hsl(122, 39%, 50%);
   color: white;
   border: none;
@@ -36,5 +36,49 @@ button[type="submit"]:hover {
 .card {
   background: linear-gradient(180deg, hsl(210, 100%, 75%), hsl(40, 100%, 75%));
   padding: 50px;
-  border-radius: 10px;
+  box-shadow: hsla(0, 0%, 0%, 0.651);
+
+  border-radius: 10%;
+
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin-top: 0%;
+  margin-bottom: 25px;
+}
+p {
+  font-size: 1rem;
+  margin: 5px 0;
+}
+
+.cityDisplay,
+.tempDisplay {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: hsla(0, 0%, 0%, 0.75);
+  margin-bottom: 25px;
+}
+
+.humidityDisplay {
+  font-weight: bold;
+  margin-bottom: 25px;
+}
+.descDisplay {
+  font-style: italic;
+  font-weight: bold;
+  font-size: 2rem;
+}
+.WeatherEmoji {
+  margin: 0%;
+  font-size: 2.5rem;
+}
+.errorDisplay {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: hsla(0, 0%, 0%, 0.75);
 }
