--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button[type="submit"]:hover {
   padding: 50px;
   box-shadow: hsla(0, 0%, 0%, 0.651);
 
-  border-radius: 10%;
+  border-radius: 10px;
 
   min-width: 300px;
   display: flex;
